--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,8 @@
 {
   "presets": [
-    ["env", {
+    ["@babel/preset-env", {
       "modules": false
     }],
-    "stage-0",
-    "react"
-  ],
-  "plugins": [
-    "external-helpers"
+    "@babel/react"
   ]
 }
